# FEngine

./: .gitignore  .gitignore.swp  .gitmodules  .ninja_log  Assets.cpp  Assets.hpp  BatchRenderer.cpp  BatchRenderer.hpp  BatchedMesh.hpp  CMakeLists.txt  Camera.hpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Credits.txt  Cube.hpp  CubeTexture.cpp  CubeTexture.hpp  Cubemap.cpp  Cubemap.hpp  CubemapShader.cpp  CubemapShader.hpp  CubemapTexture.cpp  CubemapTexture.hpp  DynamicEntityRenderer.cpp  DynamicEntityRenderer.hpp  DynamicTerrain.cpp  DynamicTerrain.hpp  DynamicTerrainShader.cpp  DynamicTerrainShader.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityHandler.cpp  EntityHandler.hpp  EntityRenderer.cpp  EntityRenderer.hpp  FirstPersonCamera.cpp  GBuffer.cpp  (+92 more)
Camera/: FirstPersonCamera.hpp
Client/: .build.ninja.swp  .ninja_log  Camera2D.cpp  Camera2D.hpp  GUIAssets.cpp  GUIAssets.hpp  GUIButton.hpp  GUICheckbox.cpp  GUICheckbox.hpp  GUIFont.cpp  GUIFont.hpp  GUIImage.cpp  GUIImage.hpp  GUIRenderer.cpp  GUIRenderer.hpp  GUIShader.cpp  GUIShader.hpp  GUISlider.cpp  Game.cpp  Game.hpp  GameStates.hpp  InputManager.cpp  InputManager.hpp  Menu.hpp  Model.cpp  Settings.cpp  Settings.hpp  Shader.cpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  build.ninja  config.txt  main.cpp  out  stb_truetype.h
GUI/: GUIButton.cpp  GUIRenderer.hpp
Renderer/: DynamicEntityRenderer.cpp  StaticEntityRenderer.hpp
Shaders/: GBufferShader.hpp  SSAOBlurShader.hpp  SkyboxShader.hpp  StaticShader.hpp  TerrainShader.hpp
Skybox/: Skybox.cpp
Terrain/: Terrain.cpp
include/: Color.hpp  Cube.hpp  DeferredRenderer.hpp  FEngine.hpp  GBuffer.hpp  MasterRenderer.hpp  Model.hpp  glad.h
include/FEngine/: Camera.hpp  CascadeShadowMap.hpp  Color.hpp  Cube.hpp  FEngine.hpp  FObject.hpp  FXAA.hpp  GBuffer.hpp  GLTexture.hpp  Image.hpp  InputManager.hpp  InstanceRenderer.hpp  MasterRenderer.hpp  Model.hpp  OBJLoader.hpp  Quad.hpp  SSAO.hpp  SSAOBlur.hpp  SSAOTexture.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  Timer.hpp  Transform.hpp  Vertex.hpp  Window.hpp
include/GL/: glad.h
res/: settings.txt
res/shaders/: blur_fragment_shader.glsl  cubemap_fragment_shader.glsl  cubemap_vertex_shader.glsl  dynamic_terrain_vertex_shader.glsl  gbuffer_fragment_shader.glsl  gbuffer_vertex_shader.glsl  gui_fragment_shader.glsl  gui_vertex_shader.glsl  model_vertex_shader.glsl  ssao_fragment_shader.glsl  ssao_lighting_fragment_shader.glsl  ssao_vertex_shader.glsl  static_fragment_shader.glsl  static_terrain_fragment_shader.glsl  static_terrain_vertex_shader.glsl  static_vertex_shader.glsl  terrain_fragment_shader.glsl
res/worlds/: 0.txt
src/: Camera.cpp  Camera.hpp  CascadeShadowMap.cpp  CascadeShadowMap.hpp  Color.hpp  Cube.cpp  Cube.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  FEngine.cpp  FEngine.hpp  FObject.h  FObject.hpp  FXAA.cpp  GBuffer.cpp  GBuffer.hpp  GLTexture.cpp  GLTexture.hpp  Image.cpp  Image.hpp  InputManager.cpp  InstanceRenderer.cpp  MasterRenderer.cpp  MasterRenderer.hpp  Model.cpp  Model.hpp  ModelRenderer.cpp  ModelRenderer.hpp  OBJLoader.cpp  Quad.cpp  Quad.hpp  SSAO.cpp  SSAOBlur.cpp  SSAOBlur.hpp  SSAOTexture.cpp  SSAOTexture.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Texture.cpp  (+11 more)
src/Camera/: Camera.cpp  Camera3D.hpp  FirstPersonCamera.hpp
src/Engine/: Assets.hpp  Engine.hpp
src/GLAD/: glad.c
src/GUI/: GUI.hpp  GUIButton.hpp  GUIImage.hpp  GUIShader.hpp  GUIVertex.cpp
src/Renderer/: BatchedMesh.hpp  DynamicEntityRenderer.hpp  Entity.hpp  (+3 more)
(+83 files in other folders)
